[package]
authors = ["Liam Marshall <limarshall@wisc.edu>"]
edition = "2018"
name = "romdump"
version = "0.1.0"

[dependencies]
cortex-m = "0.5.7"
cortex-m-rt = "0.6.3"
cortex-m-semihosting = "0.3.1"
panic-halt = "0.2"
panic-semihosting = "0.5"
nb = "0.1"

[dependencies.stm32f4xx-hal]
default-features = false
features = ["rt", "stm32f411"]
path = "../stm32f4xx-hal"

# this lets you use `cargo fix`!
[[bin]]
name = "romdump"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations